--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,28 @@
-#ant stuff
-/bin/
-/download/
-#Remove OS generated garbage
-*/.DS_Store
-.DS_Store
-.DS_Store?
-.Spotlight-V100
-.Trashes
-Icon?
-ehthumbs.db
-Thumbs.db
-#gradle stuff
-/.gradle
-/build/
-/run/
-#IDEA files from Gradle
+.gradle
+.settings
 /.idea/
-/*.iml
-/*.ipr
-/*.iws
+/run/
+/build/
+/eclipse/
+.classpath
+.project
+/bin/
+/config/
+/crash-reports/
+/logs/
+options.txt
+/saves/
+usernamecache.json
+banned-ips.json
+banned-players.json
+eula.txt
+ops.json
+server.properties
+servers.dat
+usercache.json
+whitelist.json
 /out/
-#Vim backups
-*~
-#manual version override
-version.properties
-#eclipse stuffs
-/*.classpath
-/*.project
-/.settings/
-*.bat
+*.iml
+*.ipr
+*.iws
+src/main/resources/mixins.*.json
